WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163044
Address flaky airplay-* LayouTests
https://bugs.webkit.org/show_bug.cgi?id=163044
Summary
Address flaky airplay-* LayouTests
Jer Noble
Reported
2016-10-06 11:24:16 PDT
Address flaky airplay-* LayouTests
Attachments
Patch
(24.79 KB, patch)
2016-10-06 14:10 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(4.96 KB, patch)
2016-10-07 10:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-10-06 14:10:48 PDT
Created
attachment 290863
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-06 14:12:52 PDT
Attachment 290863
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/mediasession/WebMediaSessionManager.h:49: std::unique_ptr is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3
2016-10-06 16:27:36 PDT
Comment on
attachment 290863
[details]
Patch This looks fine. You need someone to review the WK2 part of this (Beth or Alex Christensen?)
Alexey Proskuryakov
Comment 4
2016-10-06 18:32:20 PDT
Comment on
attachment 290863
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=290863&action=review
> Source/WebCore/ChangeLog:8 > + AirPlay LayoutTests will occasionally flake, likely due to two tests being run simultaneously. This is because
When multiple tests are run simultaneously, that's in separate DumpRenderTree/WebKitTestRunner processes. So, this doesn't sound like a feasible explanation. Perhaps there is a race when navigating from one test to another?
Jer Noble
Comment 5
2016-10-06 22:17:47 PDT
(In reply to
comment #4
)
> Comment on
attachment 290863
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=290863&action=review
> > > Source/WebCore/ChangeLog:8 > > + AirPlay LayoutTests will occasionally flake, likely due to two tests being run simultaneously. This is because > > When multiple tests are run simultaneously, that's in separate > DumpRenderTree/WebKitTestRunner processes. So, this doesn't sound like a > feasible explanation. > > Perhaps there is a race when navigating from one test to another?
Yes, I came to that conclusion myself. I think there is a simpler explanation: the mock AirPlay picker isn't being reset to consistent values between tests. So depending on the order in which tests are run, tests could have inconsistent results, time out, etc.
Jer Noble
Comment 6
2016-10-07 10:15:05 PDT
Created
attachment 290939
[details]
Patch
Brent Fulgham
Comment 7
2016-10-07 14:49:22 PDT
Comment on
attachment 290939
[details]
Patch Wow! So much simpler than before :-) r=me.
WebKit Commit Bot
Comment 8
2016-10-10 10:20:16 PDT
Comment on
attachment 290939
[details]
Patch Clearing flags on attachment: 290939 Committed
r207005
: <
http://trac.webkit.org/changeset/207005
>
WebKit Commit Bot
Comment 9
2016-10-10 10:20:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug