Address flaky airplay-* LayouTests https://bugs.webkit.org/show_bug.cgi?id=163044

Reviewed by Brent Fulgham.

Source/WebCore:

Two separate problems conspired to make airplay tests a bit flaky:

For one, when the HTMLMediaElement clears its MediaPlayer, it won't necessarily notify
clients that it has stopped playing to a wireless target. The WebMediaSessionManager may
eventually cause this value to reset, but it's asynchronous, and may fire after the next
test starts. Reset this state explicitly.

For two, the state of the mock playback target picker was not being reset between test
invocations.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::clearMediaPlayer):
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):

LayoutTests:

* media/airplay-autoplay.html:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/181053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207005 268f45cc-cd09-0410-ab3c-d52691b4dbfc